edit file json + add view-staff

--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,9 @@
             "styles": [
               "src/styles.css",
               "src/assets/vendor/fontawesome-free/css/all.min.css",
-              "src/assets/css/sb-admin-2.min.css"
+              "src/assets/css/sb-admin-2.min.css",
+              
+              "src/assets/vendor/datatables/dataTables.bootstrap4.min.css"
             ],
             "scripts": [
               "src/assets/vendor/jquery/jquery.min.js",
@@ -35,7 +37,11 @@
               "src/assets/js/sb-admin-2.min.js",
               "src/assets/vendor/chart.js/Chart.min.js",
               "src/assets/js/demo/chart-area-demo.js",
-              "src/assets/js/demo/chart-pie-demo.js"
+              "src/assets/js/demo/chart-pie-demo.js",
+
+              "src/assets/vendor/datatables/jquery.dataTables.min.js",
+              "src/assets/vendor/datatables/dataTables.bootstrap4.min.js",
+              "src/assets/js/demo/datatables-demo.js"
             ]
           },
           "configurations": {
