--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/ngx-toastr/toastr.css",
               "src/assets/vendor/fontawesome-free/css/all.min.css",
               "src/assets/css/sb-admin-2.min.css",
               
