structures resources and edit detail article

--- a/angular.json
+++ b/angular.json
@@ -28,21 +28,14 @@
               "node_modules/ngx-toastr/toastr.css",
               "src/assets/admin/vendor/fontawesome-free/css/all.min.css",
               "src/assets/admin/css/sb-admin-2.min.css",
-              
               "src/assets/admin/vendor/datatables/dataTables.bootstrap4.min.css"
             ],
             "scripts": [
               "src/assets/admin/vendor/jquery/jquery.min.js",
               "src/assets/admin/vendor/bootstrap/js/bootstrap.bundle.min.js",
               "src/assets/admin/vendor/jquery-easing/jquery.easing.min.js",
-              "src/assets/js/sb-admin-2.min.js",
-              "src/assets/admin/vendor/chart.js/Chart.min.js",
-              "src/assets/js/demo/chart-area-demo.js",
-              "src/assets/js/demo/chart-pie-demo.js",
-
               "src/assets/admin/vendor/datatables/jquery.dataTables.min.js",
-              "src/assets/admin/vendor/datatables/dataTables.bootstrap4.min.js",
-              "src/assets/js/demo/datatables-demo.js"
+              "src/assets/admin/vendor/datatables/dataTables.bootstrap4.min.js"
             ]
           },
           "configurations": {
