firebase and interface client

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "angularfire2": "^5.0.0-rc.10",
+    "firebase": "^7.24.0",
     "ngx-toastr": "^13.2.1",
     "ngx-webstorage": "^7.0.1",
     "rxjs": "~6.6.0",
