slide show image and validate create article

--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
     "@angular/forms": "~11.0.9",
+    "@angular/localize": "~11.0.9",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
     "@ckeditor/ckeditor5-angular": "^2.0.1",
     "@ckeditor/ckeditor5-build-classic": "^27.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.1.0",
+    "bootstrap": "^4.5.0",
     "ngx-toastr": "^13.2.1",
     "ngx-webstorage": "^7.0.1",
     "rxjs": "~6.6.0",
