--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^11.0.9",
+    "@angular/cdk": "^11.2.9",
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
@@ -24,6 +25,7 @@
     "@ckeditor/ckeditor5-build-classic": "^27.0.0",
     "@ng-bootstrap/ng-bootstrap": "^9.1.0",
     "bootstrap": "^4.5.0",
+    "ngx-pagination": "^5.0.0",
     "ngx-toastr": "^13.2.1",
     "ngx-webstorage": "^7.0.1",
     "rxjs": "~6.6.0",
